Remove scoping of mobile fix because mobile devices are too wide ranged and some will be missed. fixes #46

--- a/scss/emberui/eui-modal.scss
+++ b/scss/emberui/eui-modal.scss
@@ -48,3 +48,14 @@
     width: 100%;
   }
 }
+
+// Disables page scrolling when modal is open
+.eui-modal-open {
+  overflow: hidden;
+
+  // Required for mobile
+  &.ember-application > .ember-view:first-of-type,
+  .ember-application > .ember-view:first-of-type {
+    overflow: hidden;
+  }
+}
